Added ReactSprings, created components and move page buttons

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
+html,
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto,
+    segoe ui, arial, sans-serif;
+  background: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+}
+
+#root {
+  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.simple-trans-main > div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 800;
+  font-size: 5em;
+  will-change: transform, opacity;
+  text-shadow: 0px 2px 40px #00000020, 0px 2px 5px #00000030;
+}
+
+.btn-move-right{
+  position: absolute;
+  top: 50vh; 
+  left: 95vw;
+  width: 5rem;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+  z-index: 500;  
+
+  background-color: #ce1cb049;
+  color: #ffffff;
+  border: none; 
+  border-radius: 5px;
+
+
+}
+
+.btn-move-left{
+  position: absolute;
+  top: 50vh; 
+  left: 1vw;
+  width: 5rem;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+  z-index: 500;  
+  background-color: #ce1cb049;
+  color: #ffffff;
+  border: none; 
+  border-radius: 5px;
 }
