added color scheme and created home style files

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,7 @@ body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto,
-    segoe ui, arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -36,11 +35,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
-  font-weight: 800;
-  font-size: 5em;
   will-change: transform, opacity;
-  text-shadow: 0px 2px 40px #00000020, 0px 2px 5px #00000030;
+  
 }
 
 .btn-move-right{
@@ -52,12 +48,10 @@ body {
   cursor: pointer;
   font-size: 1rem;
   z-index: 500;  
-
   background-color: #ce1cb049;
   color: #ffffff;
   border: none; 
   border-radius: 5px;
-
 
 }
 
@@ -75,3 +69,5 @@ body {
   border: none; 
   border-radius: 5px;
 }
+
+
