--- a/src/Components/Home/home-CSS/home-style.css
+++ b/src/Components/Home/home-CSS/home-style.css
@@ -9,12 +9,21 @@
     --title-dark-gray-color: #545454;
 }
 
+.section-container{
+    display: flex;
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+    padding: 0.5rem;
+
+}
 
 img{
     width: 7rem;
 }
+
 p{
     font-family: 'Open Sans', sans-serif;
-    font-size: 0.8rem;
-    color: #acadaf;
+    font-size: 1rem;
+    color: var(--title-dark-gray-color);
 }
