--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,23 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
+:root{
+    --main-dark-gray-bg: #2b2b2b;
+    --main-light-gray-bg: #EAECEF;
+    --title-light-gray-color: #ACADAF;
+    --title-dark-gray-color: #545454;
+}
+*, *::before, *::after{
+  box-sizing: border-box;
+  /* border: 1px solid red; */
+}
 html,
 body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
+  
 }
 
 body {
@@ -27,6 +41,70 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.navigation-bar{
+  position: absolute !important;
+  top: 0;
+  left: 80%;
+  display: flex;
+  flex-direction: row;
+  z-index: 99;
+  box-sizing: border-box;
+
+}
+
+.navigation-bar p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.9rem;
+  color: var(--title-dark-gray-color);
+  border: none; 
+  background-color: transparent;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  margin-top: 3rem;
+}
+
+
+#left-logo{
+  position: absolute !important;
+  top: 0;
+  left: 3%;
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  z-index: 99;
+}
+#left-logo p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 800;
+  letter-spacing: -0.01rem;
+  text-align: center;
+  color: var(--title-dark-gray-color);
+  text-transform: uppercase;
+  border: 0.2rem solid var(--title-dark-gray-color); 
+  border-radius: 0.3rem;
+  padding: 0.5rem;
+  background-color: transparent;
+  margin: 0.5rem;
+  margin-top: 3rem;
+  
+}
+#left-logo p span{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.1rem;
+  font-weight: 900;
+  letter-spacing: -0.01rem;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--title-dark-gray-color);
+  padding: 0.5rem;
+  background-color: transparent;
+  margin: 0.5rem;
+  margin-top: 3rem;
+}
+
+
 
 .simple-trans-main > div {
   position: absolute;
@@ -69,5 +147,4 @@ body {
   border: none; 
   border-radius: 5px;
 }
-
 
