--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 :root{
     --main-dark-gray-bg: #2b2b2b;
     --main-light-gray-bg: #EAECEF;
@@ -56,6 +56,7 @@ body {
 .navigation-bar p {
   font-family: 'Open Sans', sans-serif;
   font-size: 0.9rem;
+  text-transform: uppercase;
   color: var(--title-dark-gray-color);
   border: none; 
   background-color: transparent;
@@ -73,35 +74,68 @@ body {
   display: flex;
   flex-direction: row;
   z-index: 99;
+  
 }
 #left-logo p {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Archivo Black', sans-serif;
   font-size: 1.2rem;
   font-weight: 800;
-  letter-spacing: -0.01rem;
+  letter-spacing: -0.06rem;
   text-align: center;
   color: var(--title-dark-gray-color);
   text-transform: uppercase;
   border: 0.2rem solid var(--title-dark-gray-color); 
   border-radius: 0.3rem;
+  padding: 0.1rem;
+  background-color: transparent;
+  margin: 0.5rem;
+  margin-top: 3rem;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+#left-logo p span{
+  font-family: 'Archivo Black', sans-serif;
+  font-size: 1.1rem;
+  font-weight: 900;
+  letter-spacing: -0.06rem;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--title-dark-gray-color);
   padding: 0.5rem;
   background-color: transparent;
   margin: 0.5rem;
   margin-top: 3rem;
   
 }
-#left-logo p span{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.1rem;
-  font-weight: 900;
-  letter-spacing: -0.01rem;
-  text-align: center;
-  text-transform: uppercase;
+
+#left-icons{
+  position: absolute !important;
+  top: 80%;
+  left: 3%;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0;
+  padding: 0;
+  z-index: 99;
+}
+
+#left-icons p{
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  z-index: 99;
+  color: var(--title-light-gray-color);
+  padding: 0.3rem;
+  cursor: pointer;
+
+}
+
+#left-icons p:hover{
   color: var(--title-dark-gray-color);
-  padding: 0.5rem;
-  background-color: transparent;
-  margin: 0.5rem;
-  margin-top: 3rem;
+
 }
 
 
