--- a/src/index.css
+++ b/src/index.css
@@ -16,14 +16,14 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
 
 body {
   font-family: "Open Sans", sans-serif;
-  background: transparent;
+  background: var(--main-dark-gray-bg);
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -34,19 +34,19 @@ body {
 }
 
 #root {
-  overflow: hidden;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  overflow: hidden !important;
+  overflow-y: hidden !important;
+  overflow-x: hidden !important;
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .simple-trans-main > div {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -376,7 +376,6 @@ body {
   align-items: center;
   width: 85vw;
   height: 70vh;
-  border: 1px solid gold;
 }
 
 .card-one,
@@ -389,6 +388,7 @@ body {
   align-items: center;
   width: 50%;
   height: 50%;
+  border-radius: 0.3rem;
 }
 
 .card-two,
