--- a/src/index.css
+++ b/src/index.css
@@ -488,9 +488,7 @@ h4 {
 .left-content {
   width: 100%;
   height: 100%;
-  background-color: var(--main-dark-gray-bg);
-  color: var(--title-light-gray-color);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  color: var(--foreground);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -501,8 +499,10 @@ h4 {
 
 .about-left-p {
   text-align: left;
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 600;
+  letter-spacing: 0.1rem;
+  line-height: 4.5rem;
 }
 
 .p-after {
@@ -511,14 +511,14 @@ h4 {
 }
 .p-after::after {
   content: "";
-  max-width: 24vw;
+  max-width: 29vw;
   height: 1px !important;
-  background: #f1bf6d; /*darker blue AFTER*/
+  background: #f1be6db6;
   display: block;
-  padding: 1rem;
+  padding: 0.2rem;
   z-index: -1;
-  margin-top: -2.2rem;
-  margin-left: 6rem;
+  margin-top: -1rem;
+  margin-left: 5.7rem;
 }
 
 .about-left-p span {
