--- a/src/index.css
+++ b/src/index.css
@@ -598,8 +598,8 @@ h4 {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   border-radius: 0.3rem;
   padding: 1rem;
 }
