--- a/src/index.css
+++ b/src/index.css
@@ -593,9 +593,9 @@ h4 {
 .right-content {
   width: 99%;
   height: 100%;
-  background-color: var(--main-dark-gray-bg);
-  color: var(--title-light-gray-color);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  /* background-color: var(--title-dark-gray-color); */
+  color: var(--background);
+  /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
