changed the left and right contents to flex start

--- a/src/index.css
+++ b/src/index.css
@@ -491,8 +491,8 @@ h4 {
   color: var(--foreground);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   border-radius: 0.3rem;
 }
 
